# pirccar

./: README.md
CarSimulator/: CarSimulator.sln
CarSimulator/CarSimulator/: Car.cs  CarSimulator.csproj  DistanceSensor.cs  Game1.cs  Input.cs  Program.cs  RealWorldObject.cs  Servo.cs
CarSimulator/CarSimulator/Properties/: AssemblyInfo.cs
Documents/: Install guide.txt  manual_001_500500_en_understanding_rccar_demo.docx
RCClient/: RCClient.sln
RCClient/RCClient/: Camera.cs  Decompressor.cs  Game1.cs  GameWindowExtensions.cs  Input.cs  IpInputBox.cs  Meter.cs  MyAsyncInfo.cs  Program.cs  RCClient.csproj  ReadThread.cs  SelectBox.cs  SelectBoxHandler.cs  Servo.cs  SimCar.cs  Socket_Connection.cs  StreamThread.cs  TextureColor.cs  WeightSteer.cs
RCClient/RCClient/Content/: meter.xnb  meterStick.xnb  textboxW.xnb
RCClient/RCClient/Menus/: Button.cs  Checkbox.cs  Menu.cs  MenuItem.cs
RCClient/RCClient/Properties/: AssemblyInfo.cs
RCClient/RCClient/ResolutionIndependence/: Camera2D.cs  ResolutionIndependentRenderer.cs
carserver/: CMakeCache.txt  CMakeLists.txt  Camera_wrapper.cpp  Camera_wrapper.h  HW-connection_diagram.graphml  INIReaderTest.cpp  Makefile  Network.h  PCD8544.c  PCD8544.h  Socket.cpp  Socket.h  adcthread.cpp  adcthread.h  algebra.cpp  algebra.h  autoHome.cpp  autoHome.h  autonomous.cpp  autonomous.h  camera.cpp  camera.h  cameracontrol.cpp  cameracontrol.h  camerawrapper.cpp  camerawrapper.h  carserver  carserver.cpp  carserver.ini  cmake_install.cmake  graphics.cpp  lcdscreen.cpp  lcdscreen.h  lcdthread.cpp  lcdthread.h  musicThread.cpp  musicThread.h  pca9685.cpp  pca9685.h  pinout.txt  (+12 more)
new carserver/: CMakeLists.txt  Socket.cpp  Socket.h  adcthread.cpp  adcthread.h  camera.cpp  camera.h  carserver.cpp  lcdscreen.cpp  lcdscreen.h  lcdthread.cpp
scripts/: network_monitor.sh  network_start.sh  script_auto_run.sh
test/: CMakeLists.txt  Makefile  PCD8544.h  adcthread.cpp  adcthread.h  camera.cpp  carserver.cpp  carserver_bak.cpp  graphics.h  jpge.cpp  lcd_bitmaps.h  lcdscreen.h  lcdthread.cpp  lcdthread.h  pca9685.cpp  servocontrol.cpp  servocontrol.h  servocontrolthread.cpp  thread.cpp
