cmake_minimum_required(VERSION 2.8)
project( carserver )
SET(COMPILE_DEFINITIONS -Werror)
include_directories(/opt/vc/include)
include_directories(/opt/vc/userland-master/interface/vcos)
include_directories(/opt/vc/userland-master)
include_directories(/opt/vc/userland-master/interface/vcos/pthreads)
include_directories(/opt/vc/userland-master/interface/vmcs_host/linux)
include_directories(/opt/vc/userland-master/host_applications/linux/libs/bcm_host/include)
include_directories(/usr/local/include)
include_directories(/home/pi/public/rccar)
link_directories(/opt/vc/lib)
link_directories(/usr/local/lib)
add_executable(carserver carserver.cpp PCD8544.c rs232.c pca9685.cpp camera.cpp cameracontrol.cpp camerawrapper.cpp lcdscreen.cpp socket.cpp thread.cpp adcthread.cpp lcdthread.cpp sendthread.cpp)

target_link_libraries(carserver libjpeg.so libmmal_core.so libmmal_util.so libmmal_vc_client.so libvcos.so libbcm_host.so libbcm2835.a wiringPi GLESv2 EGL ${OpenCV_LIBS})
